--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class="header-text">
+                <p>Web Developer</p>
+                <h1>Hi,I'm <span>Purushottam</span><br>Thakur From India</h1>
+            </div>
+        </div>
+    </div>
+    <!----------about---------->
+    <div id="about">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="images/user.png">
+            </div>
+            <div class="about-col-2">
+                <h1 class="sub-title">About Me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis 
+                   voluptas laborum quaerat nemo quia eligendi suscipit, a culpa corporis 
+                   harum. Accusamus quisquam ratione dicta possimus voluptatibus, ipsa 
+                   molestias? Reprehenderit, perferendis!</p>
+            </div>
         </div>
     </div>
 </body>
 </html>
-
-zfkk
