--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis 
-                   voluptas laborum quaerat nemo quia eligendi suscipit, a culpa corporis 
-                   harum. Accusamus quisquam ratione dicta possimus voluptatibus, ipsa 
-                   molestias? Reprehenderit, perferendis!</p>
+                <p>Hey, Visitors! Purushottam here, a UG student pursuing Majors in Computer Science Engineering. I'm a full Computer Science Enthusiast. I've been learning to code since the age of 19, and have been able to make my learning curve positive. I'll say, I'm not the best coder, but I know what I do is with my full dedication to it!</p>
             </div>
         </div>
     </div>
