--- a/index.html
+++ b/index.html
@@ -29,13 +29,57 @@
     <div id="about">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user.png">
+                <img src="images/pritam usern.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Hey, Visitors! Purushottam here, a UG student pursuing Majors in Computer Science Engineering. I'm a full Computer Science Enthusiast. I've been learning to code since the age of 19, and have been able to make my learning curve positive. I'll say, I'm not the best coder, but I know what I do is with my full dedication to it!</p>
+                <p>Hey, Visitors! Purushottam here, a UG student pursuing Majors in Computer Science Engineering. 
+                   I'm a full Computer Science Enthusiast. I've been learning to code since the age of 19, and have 
+                   been able to make my learning curve positive. I'll say, I'm not the best coder, but I know what 
+                   I do is with my full dedication to it!</p>
+                   <br>
+                   <p>I am a dedicated web developer with a strong background in front-end development. 
+                    I specialize in HTML, CSS, JavaScript, and Angular, and have successfully delivered numerous 
+                    projects that meet client requirements and exceed expectations. With a keen eye for design and 
+                    a passion for creating seamless user experiences, I am committed to staying updated on the latest 
+                    web technologies and trends. I excel at problem-solving and enjoy working in a team environment to 
+                    bring creative ideas to life. My goal is to continue pushing the boundaries of web development and 
+                     delivering cutting-edge solutions that make a positive impact.</p>
+                     
+                     <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>Web Development</span><br>Web App Development</li>
+                            <li><span>App Development</span><br>Building Android/iOS apps</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
+                            <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
+                            <li><span>2017-2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
+                            <li><span>2016-2017</span><br>Internship at ekart eCommerce.</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="education">
+                        <ul>
+                            <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
+                            <li><span>2016</span><br>MBA from MIT Bangalore.</li>
+                            <li><span>2014</span><br>BBA from ISM Bangalore.</li>
+                        </ul>
+                    </div>
             </div>
         </div>
     </div>
+
+    <script>
+        var
+    </script>
+
 </body>
 </html>
