--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <nav>
                 <img src="images/logos.png" class="logos">
                 <ul id="sidemenu">
+                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
@@ -35,7 +35,7 @@
                 <img src="images/pritam usern.jpg">
             </div>
             <div class="about-col-2">
-                <h1 class="sub-title">About Me</h1>
+                <h1 class="sub-title">About Me</h1><br>
                 <p>Hey, Visitors! Purushottam here, a UG student pursuing Majors in Computer Science Engineering. 
                    I'm a full Computer Science Enthusiast. I've been learning to code since the age of 19, and have 
                    been able to make my learning curve positive. I'll say, I'm not the best coder, but I know what 
