--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
    <div class="row">
     <div class="contact-left">
         <h1 class="sub-title">Contact Me</h1>
-        <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
-        <p><i class="fa-solid fa-phone"></i>0123456789</p>
+        <p><i class="fa-solid fa-paper-plane"></i>  pt513244@gmail.com</p>
+        <p><i class="fa-solid fa-phone"></i>  0123456789</p>
         <div class="social-icons">
             <a href="https://www.facebook.com/pritam.kashyap.902266"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://twitter.com/purushottam_047"><i class="fa-brands fa-twitter-square"></i></a>
